packages/kotlin/ttrp-frontend/src/test/resources/negative/ctl-001.ttrp
a = load(files.a)
b = load(files.b)
a finishes with b
